--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ShopNSplit"
+        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
+        tools:ignore="ExtraText">
         tools:targetApi="31">
         <activity
             android:name=".Register"
