--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ buildscript {
     repositories {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
-
         mavenCentral()  // Maven Central repository
+        maven { url 'https://jitpack.io' }
 
     }
     dependencies {
@@ -29,6 +29,6 @@ allprojects {
         google()  // Google's Maven repository
 
         mavenCentral()  // Maven Central repository
-
+        maven { url 'https://jitpack.io' }
     }
 }
