--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,11 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.0.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
-    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
-
+    implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.4'
+    implementation 'com.google.firebase:firebase-firestore:24.4.1'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
 }
