--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,14 +43,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-    implementation platform('com.google.firebase:firebase-bom:31.0.1')
+    implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+    implementation 'com.google.android.gms:play-services-auth:20.4.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'org.jsoup:jsoup:1.13.1'
-    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+    implementation 'org.jsoup:jsoup:1.15.3'
+    implementation 'com.google.android.gms:play-services-auth:20.4.0'
     implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.4'
     implementation 'com.google.firebase:firebase-firestore:24.4.1'
     implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.github.iamageo:bank-card-view:1.0.0'
 }
