--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
+        jcenter() // Bintray's Maven repository
         mavenCentral()  // Maven Central repository
         maven { url 'https://jitpack.io' }
 
@@ -27,6 +28,7 @@ allprojects {
     repositories {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
+        jcenter() // Bintray's Maven repository
         mavenCentral()  // Maven Central repository
         maven { url 'https://jitpack.io' }
     }
