--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.4'
     implementation 'com.google.firebase:firebase-firestore:24.4.1'
     implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.wajahatkarim:EasyFlipView:3.0.3'
 }
