--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.4.1'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.wajahatkarim:EasyFlipView:3.0.3'
+    implementation 'com.github.medyo:android-about-page:1.2.6'
+
 }
