--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.wajahatkarim:EasyFlipView:3.0.3'
     implementation 'com.github.medyo:android-about-page:1.2.6'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 
 }
